<resources>
    <string name="app_name">SCHOOLISH - (Botón de Pánico)</string>
    <string name="facebook_app_id">306554964523433</string>
    <string name="fb_login_protocol_scheme">fb306554964523433</string>
    <string name="title_activity_app">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prefs_file"> com.proyecto.ebabotndepnico.PREFERENCE_FILE_KEY </string>
    <string name="btn_change">Modificar</string>

    <string name="apiMapa">AIzaSyBmVt3P8YZoZj-xJZXw3NVjhNiUvVLa46U</string>
    <string name="label_from">Direccion origen: %s</string>
    <string name="label_to">Direccion destino: %s</string>
    <string name="no_place_selected">%1$s</string>
    <string name="label_distance">Distance: %1$.2f metros</string>
    <string name="label_time">Time: %1$d segundos</string>

    <string name="marker_title_from">Desde</string>
    <string name="marker_title_to">Hasta</string>
</resources>