<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mapa.Mapa">

  <TextView
      android:id="@+id/tvFrom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_from"/>

  <Button
      android:id="@+id/btnFrom"
      android:text="@string/btn_change"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <TextView
      android:id="@+id/tvTo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_to"/>

  <Button
      android:id="@+id/btnTo"
      android:text="@string/btn_change"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <!-- mapa -->
  <fragment
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:id="@+id/map"
      tools:context=".MapsActivity"
      android:name="com.google.android.gms.maps.SupportMapFragment" />


  <!-- info distancia -->
  <LinearLayout
      android:id="@+id/llTravelInfo"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDistance"
        android:text="@string/label_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTime"
        android:text="@string/label_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



  </LinearLayout>

  </LinearLayout>
